add support of nvExt for profiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ if( CHASE_OUTPUT )
   target_compile_definitions( chase_algorithm  INTERFACE "-DCHASE_OUTPUT" )
 endif()
 
+option(ENABLE_NSIGHT "Enable profiling with Nvidia Nsight Systems" ON)
+
 install( TARGETS chase_algorithm
   EXPORT chase-headers
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
