--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -158,6 +158,13 @@ if(CMAKE_CUDA_COMPILER)
 
   message("-- Configuring the build of CUDA with the compute capability of ${CMAKE_CUDA_ARCHITECTURES}")
 
+  if(NOT DEFINED CUDA_nvToolsExt_LIBRARY)
+    set (CUDA_nvToolsExt_LIBRARY "")
+    if(ENABLE_NSIGHT)
+      message(STATUS "No Nsight Profiling Tools detected")
+      set(ENABLE_NSIGHT OFF CACHE BOOL "" FORCE)
+    endif()
+  endif()	  
   add_library( chase_cuda "kernels/shift.cu" )
 
   set_target_properties( chase_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
@@ -175,6 +182,13 @@ if(CMAKE_CUDA_COMPILER)
     ${CUDA_cusolver_LIBRARY}
     ${CUDA_nvToolsExt_LIBRARY}
     )
+   
+  if(ENABLE_NSIGHT)
+      target_compile_definitions(chase_cuda INTERFACE USE_NSIGHT)
+      target_compile_definitions(chase_seq  INTERFACE USE_NSIGHT)
+      target_compile_definitions(chase_mpi INTERFACE USE_NSIGHT)
+      target_compile_definitions(chase_algorithm INTERFACE USE_NSIGHT)
+  endif()	  
 
   install( TARGETS chase_cuda
     EXPORT chase-cuda
@@ -192,6 +206,9 @@ if(CMAKE_CUDA_COMPILER)
 
 else()
   message(STATUS "No CUDA support")
+  if(ENABLE_NSIGHT)
+      message(STATUS "No CUDA support for Nsight Profiling Tools")
+  endif()
 endif()
 
 
