try to fix the CI

--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -5,6 +5,11 @@ cmake_minimum_required( VERSION 3.8 )
 
 # project( ChASE-MPI LANGUAGES C CXX CUDA )
 
+find_package(OpenMP)
+if(OpenMP_FOUND)
+  target_compile_definitions( chase_algorithm  INTERFACE "HAS_OMP" )
+endif()
+
 add_library( chase_seq INTERFACE )
 target_link_libraries(chase_seq INTERFACE chase_algorithm)
 target_compile_definitions(chase_seq INTERFACE NO_MPI=1 )
@@ -54,6 +59,13 @@ if(SCALAPACK_FOUND)
   	${SCALAPACK_LIBRARIES}
   	)
 endif()
+
+if(OpenMP_FOUND)
+    target_link_libraries( chase_seq INTERFACE
+	    OpenMP::OpenMP_CXX
+        )
+endif()
+
 target_compile_options( chase_seq INTERFACE
   ${CMAKE_C_FLAGS}
   ${MPI_CXX_COMPILE_FLAGS}  
@@ -94,6 +106,13 @@ if(SCALAPACK_FOUND)
   target_compile_definitions( chase_mpi INTERFACE 
 	  "-DHAS_SCALAPACK" 
 	)
+endif()
+
+
+if(OpenMP_FOUND)
+    target_link_libraries( chase_mpi INTERFACE
+            OpenMP::OpenMP_CXX
+        )
 endif()
 
 install( TARGETS chase_mpi
