new C/Fortran interface for ChASE-SEQ done

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,7 +3,7 @@ set(subdirs
     1_sequence_eigenproblems
     2_input_output
     #    4_gev
-    5_c_interface
+    5_interface
 )
 
 foreach(subdir ${subdirs})
