add C interface for dist-ChASE and related example

--- a/examples/5_interface/CMakeLists.txt
+++ b/examples/5_interface/CMakeLists.txt
@@ -1,7 +1,10 @@
-add_executable( "5_c_interface.exe" 5_c_interface.c )
-target_link_libraries(5_c_interface.exe chase_c)
+add_executable( "5_c_seial_chase.exe" 5_c_seial_chase.c )
+target_link_libraries(5_c_seial_chase.exe chase_c)
+
+add_executable( "5_c_dist_chase.exe" 5_c_dist_chase.c )
+target_link_libraries(5_c_dist_chase.exe chase_c)
 
 enable_language( Fortran )
 
-add_executable( "5_f_interface.exe" 5_f_interface.f90 )
-target_link_libraries(5_f_interface.exe chase_c chase_f)
+add_executable( "5_f_seial_chase.exe" 5_f_seial_chase.f90 )
+target_link_libraries(5_f_seial_chase.exe chase_c chase_f)
