--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -47,6 +47,20 @@ set(DOXYGEN_EXCLUDE_PATTERNS "*.rst")
 set(DOXYGEN_EXCLUDE_PATTERNS "*.tex")
 set(DOXYGEN_PROJECT_BRIEF "ChASE: an Iterative Solver for Dense Eigenproblems")
 set(DOXYGEN_EXTRACT_PRIVATE YES)
+#set(DOXYGEN_EXTRACT_ALL YES)
+#set(DOXYGEN_CLASS_DIAGRAMS YES)
+#set(DOXYGEN_HIDE_UNDOC_RELATIONS NO)
+#set(DOXYGEN_HAVE_DOT YES)
+#set(DOXYGEN_CLASS_GRAPH YES)
+#set(DOXYGEN_COLLABORATION_GRAPH YES)
+#set(DOXYGEN_UML_LOOK YES)
+#set(DOXYGEN_UML_LIMIT_NUM_FIELDS 50)
+#set(DOXYGEN_TEMPLATE_RELATIONS YES)
+#set(DOXYGEN_DOT_GRAPH_MAX_NODES 100)
+#set(DOXYGEN_MAX_DOT_GRAPH_DEPTH 0)
+#set(DOXYGEN_DOT_TRANSPARENT YES)
+#set(DOXYGEN_DOT_IMAGE_FORMAT "svg")
+#set(DOXYGEN_INTERACTIVE_SVG YES)
 
 make_directory(${DOXYGEN_HTML_OUTPUT})
 
