--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -47,6 +47,7 @@ set(DOXYGEN_EXCLUDE_PATTERNS "*.rst")
 set(DOXYGEN_EXCLUDE_PATTERNS "*.tex")
 set(DOXYGEN_PROJECT_BRIEF "ChASE: an Iterative Solver for Dense Eigenproblems")
 set(DOXYGEN_EXTRACT_PRIVATE YES)
+set(DOXYGEN_OPTIMIZE_FOR_FORTRAN YES)
 #set(DOXYGEN_EXTRACT_ALL YES)
 #set(DOXYGEN_CLASS_DIAGRAMS YES)
 #set(DOXYGEN_HIDE_UNDOC_RELATIONS NO)
@@ -61,6 +62,7 @@ set(DOXYGEN_EXTRACT_PRIVATE YES)
 #set(DOXYGEN_DOT_TRANSPARENT YES)
 #set(DOXYGEN_DOT_IMAGE_FORMAT "svg")
 #set(DOXYGEN_INTERACTIVE_SVG YES)
+
 
 make_directory(${DOXYGEN_HTML_OUTPUT})
 
