Revert "fixed bug for ChASE-GPU with cuda-aware disabled"
This reverts commit afb8f1f1f490724a0c401cc3139309ed6ec0711d

--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -137,7 +137,7 @@ if(CMAKE_CUDA_COMPILER)
       set(ENABLE_NSIGHT OFF CACHE BOOL "" FORCE)
     endif()
   endif()	  
-  add_library( chase_cuda "kernels/kernels.cu" )
+  add_library( chase_cuda "kernels/shift.cu" )
 
   set_target_properties( chase_cuda 
 	  		 PROPERTIES
