cmake: adding popl

--- a/examples/2_input_output/CMakeLists.txt
+++ b/examples/2_input_output/CMakeLists.txt
@@ -1,7 +1,6 @@
-find_package( Boost COMPONENTS serialization program_options filesystem )
+include(${CMAKE_SOURCE_DIR}/cmake/external/popl/Fetchpopl.cmake)
 
-if( ${Boost_FOUND} )
-
+if(POPL_FOUND)
   ##############################################################################
   #               2_input_output_seq: no GPU, $A$ not distributed
   ##############################################################################
@@ -9,18 +8,21 @@ if( ${Boost_FOUND} )
   add_executable( "2_input_output_seq"
     "2_input_output.cpp"
     )
-  target_link_libraries( "2_input_output_seq" PRIVATE chase_seq ${Boost_LIBRARIES})
+  target_link_libraries( "2_input_output_seq" PRIVATE chase_seq )
+  target_include_directories( "2_input_output_seq" PRIVATE ${POPL_INCLUDE_DIR})
 
   ##############################################################################
   #           2_input_output: no GPU, MPI ($A$ distributed among MPI-ranks)
   ##############################################################################
 
   add_executable( "2_input_output" "2_input_output.cpp" )
-  target_link_libraries( "2_input_output" chase_mpi ${Boost_LIBRARIES} ${CUDA_nvToolsExt_LIBRARY})
+  target_link_libraries( "2_input_output" chase_mpi ${CUDA_nvToolsExt_LIBRARY})
+  target_include_directories( "2_input_output" PRIVATE ${POPL_INCLUDE_DIR})
   target_compile_definitions( "2_input_output" PRIVATE USE_MPI=1 PRINT_EIGENVALUES=1)
 
   add_executable( "2_input_output_block_cyclic" "2_input_output.cpp" )
-  target_link_libraries( "2_input_output_block_cyclic" chase_mpi ${Boost_LIBRARIES} )
+  target_link_libraries( "2_input_output_block_cyclic" chase_mpi )
+  target_include_directories( "2_input_output_block_cyclic" PRIVATE ${POPL_INCLUDE_DIR})
   target_compile_definitions( "2_input_output_block_cyclic" PRIVATE USE_MPI=1 USE_BLOCK_CYCLIC=1)  
 
   install (TARGETS 2_input_output_seq
@@ -48,11 +50,13 @@ if( ${Boost_FOUND} )
     endif()
 
     add_executable( 2_input_output_mgpu "2_input_output.cpp" )
-    target_link_libraries( 2_input_output_mgpu chase_mpi chase_cuda ${Boost_LIBRARIES} ${CUDA_nvToolsExt_LIBRARY})
+    target_link_libraries( 2_input_output_mgpu chase_mpi chase_cuda ${CUDA_nvToolsExt_LIBRARY})
+    target_include_directories( 2_input_output_mgpu PRIVATE ${POPL_INCLUDE_DIR})
     target_compile_definitions( "2_input_output_mgpu" PRIVATE DRIVER_BUILD_MGPU=1 PRINT_EIGENVALUES=1 USE_MPI=1)
 
     add_executable( 2_input_output_mgpu_block_cyclic "2_input_output.cpp" )
-    target_link_libraries( 2_input_output_mgpu_block_cyclic chase_mpi chase_cuda ${Boost_LIBRARIES})
+    target_link_libraries( 2_input_output_mgpu_block_cyclic chase_mpi chase_cuda )
+    target_include_directories( 2_input_output_mgpu_block_cyclic PRIVATE ${POPL_INCLUDE_DIR})
     target_compile_definitions( "2_input_output_mgpu_block_cyclic" PRIVATE DRIVER_BUILD_MGPU=1 USE_MPI=1 USE_BLOCK_CYCLIC=1)
 
     install (TARGETS 2_input_output_mgpu
@@ -62,6 +66,6 @@ if( ${Boost_FOUND} )
   endif()  
 
 else()
-  message( "Boost not found, not building example 2" )
+  message( "popl not found, not building example 2" )
 endif()
 
