replace multiple Lanczos by  block-Lanczos for the CPU version of ChASE

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,8 @@
 set(subdirs
 	  0_hello_world
-    1_sequence_eigenproblems
-    2_input_output
-    4_interface
+    #1_sequence_eigenproblems
+    #2_input_output
+    #4_interface
 )
 
 foreach(subdir ${subdirs})
