--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ default:
 build:
   stage: build
   script:
+  - cmake --version
   - mkdir -p build
   - cd build
   - FC=gfortran CC=gcc CXX=g++ cmake -DENABLE_TESTS=ON ..
