--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ build:
   - cmake --version
   - mkdir -p build
   - cd build
-  - FC=gfortran CC=gcc CXX=g++ cmake -DENABLE_TESTS=ON -DBUILD_WITH_EXAMPLES=ON ..
+  - FC=gfortran CC=gcc CXX=g++ cmake -DENABLE_TESTS=ON ..
   - make VERBOSE=1
   artifacts:
     paths:
