Update .gitlab-ci.yml artifacts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ build:
     - build/Makefile
     - build/chase_driver
     - build/CTestTestfile.cmake
+    - build/tests
 test:
   stage: test
   script:
