--- a/ChASE-MPI/CMakeLists.txt
+++ b/ChASE-MPI/CMakeLists.txt
@@ -5,10 +5,12 @@ cmake_minimum_required( VERSION 3.8 )
 
 option(ENABLE_CUDA_AWARE_MPI "Enable CUDA aware MPI for collective communications" ON)
 option(ENABLE_NCCL "Enable Nvidia NCCL for collective communications" ON)
+option(ENABLE_BLANCZOS "Enable Block Lanczos" OFF)
 
 add_library( chase_seq INTERFACE )
 target_link_libraries(chase_seq INTERFACE chase_algorithm)
 target_compile_definitions(chase_seq INTERFACE NO_MPI=1 )
+
 
 add_library( chase_mpi INTERFACE )
 target_link_libraries(chase_mpi INTERFACE chase_algorithm)
@@ -86,6 +88,14 @@ target_compile_definitions( chase_mpi INTERFACE
 	  "-DUSE_MPI"
         )
 
+if(ENABLE_BLANCZOS)
+target_compile_definitions( chase_seq INTERFACE
+	  "-DUSE_BLANCZOS"
+        )
+target_compile_definitions( chase_mpi INTERFACE
+	  "-DUSE_BLANCZOS"
+        )
+endif()
 include(CheckLanguage)
 check_language(CUDA)
 if(CMAKE_CUDA_COMPILER)
