--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,8 +20,10 @@ function(setup_test name)
   target_link_libraries(${name} ${libraries} ${MPI_CXX_LIBRARIES} GTest::gtest_main)
   
   if(MPI_TEST)
+    target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=4)
     add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml : -n 3 $<TARGET_FILE:${name}>)
   else()
+    target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=1)
     add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
   endif()
 endfunction()
