feat: Add QR integration test
This commit introduces implementation of  QR integration test to verify logic inside QR routine of ChaseMpi.

Also adding new ChaseMpi constructor to accept mockChaseMpiDla as a parameter.

--- a/tests/QR/CMakeLists.txt
+++ b/tests/QR/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(COPY QR_matrices DESTINATION ${CMAKE_BINARY_DIR}/tests/QR)
 
 setup_test(QRTest QR_test.cpp LIBRARIES chase_mpi)
-setup_test(QRTestIntegration QR_integration.cpp LIBRARIES chase_mpi)
+setup_test(QRTestIntegration QR_integration.cpp LIBRARIES chase_mpi GTest::gmock)
 #setup_test(QRTestCuda QR_test.cpp LIBRARIES chase_mpi chase_cuda)
