initally add block lanczos for distributed-CPU version

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(subdirs
 	  0_hello_world
-    #1_sequence_eigenproblems
+    1_sequence_eigenproblems
     #2_input_output
     #4_interface
 )
