Refactor QR Factorization Test Suite with the support of GPUs
1. **Update** the names of ill-conditioned matrices for single precision.
2. **Introduce** `matrix_properties_` in the `QRfixture` class. In the test, replace the pointer inside `readVectors` with the host buffer pointed by `Matrix<T>` class.
3. **Support GPUs** : after reading vectors, synchronize them to the device if necessary. After QR factorization, copy results back to the CPU if necessary.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -23,7 +23,7 @@ function(setup_test name)
     target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=4)
     add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml : -n 3 $<TARGET_FILE:${name}>)
   else()
-    target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=1 SERIAL_TEST=1)
+    target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=1)
     add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
   endif()
 endfunction()
