Implement Symmetry check and symmetrization function.
1. **checkSymmetryEasy** was implemented as comparing the resulted vectors of Av and A^T element by element.
2. the **symmetrization** function was implemented based on ScaLAPACK pxtran(c) routines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,9 @@ project( ChASE LANGUAGES C CXX VERSION 1.3.0 )
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 # ## algorithm ##
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 add_library(chase_algorithm INTERFACE)
 
