--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,7 +2,7 @@ set(subdirs
 	  0_hello_world
     1_sequence_eigenproblems
     2_input_output
-    4_interface
+    #4_interface
 )
 
 foreach(subdir ${subdirs})
