Revert "Merge branch '40-bugs-when-running-unitests-with-slurm' into 'master'"
This reverts commit 90aac4633658ce979d1e3accd820dbd283e6b30e, reversing
changes made to 18cfb0c9b050f3d5531479ca93f94d6156646bdb.

Collective Lanczos doesn't work properly for cuda-aware version.
This would be investigated after my vacation.
revert to previous merge request to make ChASE ready to JUREAP.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,14 +21,10 @@ function(setup_test name)
   
   if(MPI_TEST)
     target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=4)
-    if(${MPI_RUN} STREQUAL "srun")
-      add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 4 $<TARGET_FILE:${name}>)
-    else()#mpirun
-      add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml : -n 3 $<TARGET_FILE:${name}>)
-    endif()
+    add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml : -n 3 $<TARGET_FILE:${name}>)
   else()
     target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=1)
-    add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
+    add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
   endif()
 endfunction()
 
@@ -51,7 +47,7 @@ function(setup_test_serial name)
   target_link_libraries(${name} ${libraries} ${MPI_CXX_LIBRARIES} GTest::gtest_main)
 
   target_compile_definitions(${name} PRIVATE MPI_NUM_PROCS=1 SERIAL_TEST=1)
-  add_test(NAME ${name} COMMAND ${MPI_RUN} ${MPI_RUN_ARGS} -n 1 $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
+  add_test(NAME ${name} COMMAND $<TARGET_FILE:${name}> --gtest_output=xml:unittest_reports/${name}_report.xml)
 endfunction()
 
 add_subdirectory(QR)
