Implement MpiGrid2D to create MPI 2D grid and distributed Matrix class for redundant and block block distribution

--- a/Impl/CMakeLists.txt
+++ b/Impl/CMakeLists.txt
@@ -11,3 +11,16 @@ target_include_directories( chase_cpu INTERFACE
 
 target_include_directories(chase_cpu INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(chase_cpu INTERFACE NO_MPI=1 )
+
+find_package(MPI REQUIRED)
+add_library(chase_mpi INTERFACE)
+target_link_libraries(chase_mpi INTERFACE chase_algorithm blaspp linalg_internal_cpu)
+target_include_directories( chase_mpi INTERFACE
+  "$<BUILD_INTERFACE:${includePath}>"
+  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>  # <prefix>/include/ChASE-MPI
+)
+
+target_include_directories(chase_mpi INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_compile_definitions(chase_mpi INTERFACE NO_MPI=0 )
+
+target_link_libraries(chase_mpi INTERFACE MPI::MPI_CXX)
