Add the implementation of RayleighRitz for distributed-CPU version

--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -1,2 +1,3 @@
 setup_test(HEMMCPUDistTest hemm.cpp LIBRARIES chase_mpi)
 setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES chase_mpi)
+setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES chase_mpi)
