--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -2,3 +2,4 @@ setup_test(HEMMCPUDistTest hemm.cpp LIBRARIES chase_mpi)
 setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES chase_mpi)
 setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES chase_mpi)
 setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES chase_mpi)
+setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES chase_mpi)
