--- a/tests/linalg/internal/mpi/CMakeLists.txt
+++ b/tests/linalg/internal/mpi/CMakeLists.txt
@@ -3,3 +3,5 @@ setup_test(CholQRCPUDistTest cholqr.cpp LIBRARIES chase_mpi)
 setup_test(RayleighRitzCPUDistTest rayleighRitz.cpp LIBRARIES chase_mpi)
 setup_test(ResidualsCPUDistTest residuals.cpp LIBRARIES chase_mpi)
 setup_test(LanczosCPUDistTest lanczos.cpp LIBRARIES chase_mpi)
+setup_test(shiftDiagonalCPUDistTest shiftDiagonal.cpp LIBRARIES chase_mpi)
+setup_test(symOrHermCPUDistTest symOrHerm.cpp LIBRARIES chase_mpi)
