--- a/Impl/CMakeLists.txt
+++ b/Impl/CMakeLists.txt
@@ -24,3 +24,9 @@ target_include_directories(chase_mpi INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
 target_compile_definitions(chase_mpi INTERFACE NO_MPI=0 )
 
 target_link_libraries(chase_mpi INTERFACE MPI::MPI_CXX)
+if(TARGET scalapackpp)
+  message("ScaLAPACK is enabled in ChASE-MPI")
+  target_link_libraries(chase_mpi INTERFACE scalapackpp)
+  target_compile_definitions(chase_mpi INTERFACE HAS_SCALAPACK=1 )
+
+endif()
